# Aitrainer

./: .gitignore  Amygdala.cpp  Amygdala.h  BasalGanglia.cpp  BasalGanglia.h  Brain.cpp  Brain.h  CMakeLists.txt  Cerebellum.cpp  Cerebellum.h  FrontalLobe.cpp  FrontalLobe.h  Hippocampus.cpp  Hippocampus.h  LightweightTensorReasoner.cpp  LightweightTensorReasoner.h  Main.qml  README.md  Synapse.h  TemporalLobe.cpp  TemporalLobe.h  Thalamus.cpp  Thalamus.h  agentcontroller.cpp  agentcontroller.h  compile_commands.json  debug_featherless_simulation.txt  learningagent.cpp  learningagent.h  loraadapter.cpp  loraadapter.h  main.cpp
.cache/clangd/index/: Amygdala.cpp.B721FEAF8277CFAA.idx  Amygdala.h.9BDBF7CDF85673F2.idx  BasalGanglia.cpp.8EF1FF21DA108F95.idx  BasalGanglia.h.3D6742190DEEBDB0.idx  Brain.cpp.9739FE0268DB0BD4.idx  Brain.h.C4D531B7998F9DED.idx  Cerebellum.cpp.C6A7EF4F1A56719A.idx  Cerebellum.h.5186E04CFFC8C8D2.idx  FrontalLobe.cpp.EE21B99092C14263.idx  FrontalLobe.h.EEFFDB9FF9326B4A.idx  Hippocampus.cpp.0D7A5F2DD26722CD.idx  Hippocampus.h.98D78808A9122B93.idx  Synapse.h.2AC5643D5BA15AF9.idx  TemporalLobe.cpp.50AE03816A4EBDA1.idx  TemporalLobe.h.C50C73B8562D7583.idx  Thalamus.cpp.BD6E015763DB6F4B.idx  Thalamus.h.9501C279397C6DF0.idx  agentcontroller.cpp.36BB94B1C5A41BC6.idx  agentcontroller.h.DD0389485D587081.idx  learningagent.cpp.4BDBA8D1824E2D0D.idx  learningagent.h.FA9CB4B1534DC4E4.idx  main.cpp.9AAD7E6F32D43025.idx
aimobile/: CMakeLists.txt  main.cpp  mobileagentcontroller.cpp  mobileagentcontroller.h
build-aimobile-android-arm64/: android-appaimobile-deployment-settings.json  appaimobile.bat  appaimobile_qmltyperegistrations.cpp
build-aimobile-android-arm64/.qt/: .qmlls.build.ini  QtDeploySupport.cmake  QtDeployTargets.cmake  appaimobile_qml.cmake  appaimobile_res.cmake
build-aimobile-android-arm64/.qt/qml_imports/: appaimobile_conf.cmake  appaimobile_conf.rsp
build-aimobile-android-arm64/.qt/rcc/: appaimobile_raw_qml_0.qrc  bundled_student_model.qrc  qmake_aimobile.qrc  qrc_appaimobile_raw_qml_0.cpp  qrc_qmake_aimobile.cpp
build-aimobile-android-arm64/.rcc/qmllint/: appaimobile.rsp  appaimobile_json.rsp  appaimobile_module.rsp
build-aimobile-android-arm64/aimobile/: Main.qml  appaimobile_qml_module_dir_map.qrc  qmldir
build-aimobile-android-arm64/android-build/: AndroidManifest.xml  appaimobile.d  gradle.properties  local.properties
build-aimobile-android-arm64/android-build/assets/: android_rcc_bundle.rcc
build-aimobile-android-arm64/android-build/res/values/: libs.xml
build-aimobile-android-arm64/appaimobile_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-aimobile-android-arm64/appaimobile_autogen/EWIEGA46WW/: moc_mobileagentcontroller.cpp  moc_mobileagentcontroller.cpp.d  moc_mobileagentcontroller.cpp.json
build-aimobile-android-arm64/meta_types/: appaimobile_json_file_list.txt  appaimobile_json_file_list.txt.timestamp  qt6appaimobile_metatypes.json
build-aimobile-android-arm64/qmltypes/: appaimobile_foreign_types.txt
